--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,9 @@ img {
     width: 100%;
 }
 
-
+input {
+    outline: 0;
+}
 
 /* main-nav */
 .main-nav {
@@ -113,6 +115,8 @@ img {
 .nav-list .activ {
     position: relative;
     color:#2196F3;
+    
+    
 }
 
 .nav-list .activ::after {
@@ -126,6 +130,7 @@ img {
     height: 4px;
     background-color: #2196F3;
     border-radius: 2px;
+    bottom: -1px;
 }
 
 .nav-list .link:hover,
@@ -575,6 +580,8 @@ img {
     display: flex;
     align-items: baseline;
     
+    
+    
  }
 
 .footer-link {
@@ -608,10 +615,12 @@ img {
 
 
 .contact {
-    margin-right: 70px;
+    margin-right: auto;
 }
 
-
+.join {
+    margin-right: auto;
+}
 
 .join-title {
     margin-top: 0;
@@ -655,6 +664,81 @@ img {
 .join-link:hover,
 .join-link:focus {
     background-color: #2196F3;
+}
+
+.sub{
+    
+    margin: 0;
+    padding: 0;
+}
+
+.sub-form {
+    display: flex;
+    justify-content: center;
+}
+.sub-title {
+    display: block;
+    margin: 0;
+    padding-top: 0;
+    padding-bottom: 20px;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    
+    color: #FFFFFF;
+}
+
+.email {
+    
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 16px;
+    margin-right: 12px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    
+    
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    background-color:#2F303A;
+    color: rgba(255, 255, 255, 0.6);
+    
+}
+.sub-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+       
+    width: 200px;
+    height: 50px;
+    background: #2196F3;
+    border-color: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    
+    color: #FFFFFF;
+    
+}
+
+.icon-telegram {
+    fill: currentColor;
+    margin-left: 10px;
+
+    
 }
 
 
@@ -853,12 +937,11 @@ img {
 }
 
 .modal-wrapper {
+    padding: 40px;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     width: 528px;
-    height: 581px;
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -889,6 +972,203 @@ img {
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
 
+    cursor: pointer;
+}
+.modal-btn:focus,
+.modal-btn:hover {
+    color: #188CE8;
+}
+
+.icon-close {
+    fill: currentColor;
+}
+
+.contact-form {
+    margin: 0;
+    text-align: start;
+    width: 448px;
+    
+}
+.form-title {
+    display: block;
+    margin: 0;
+    padding-top: 0;
+    margin-bottom: 12px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+
+}
+
+
+.form {
+    display: block;
+    
+ 
+}
+.form-group {
+    display: block;
+    margin-bottom: 10px;
+}
+.form-group:focus-within .form-icons{
+    color: #2196F3;
+}
+
+.form-block {
+    display: block;
+    position: relative;
+    color: var(--title-text-color);
+    
+}
+
+.form-icons {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    color: var(--title-text-color);
+    fill: currentColor;
+    transform: translateY(-50%);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-label {
+    display: inline-block;
+    margin-bottom: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: #757575;
+}
+
+.form-input {
+    display: block;
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 11px 12px 11px 40px;
+    
+    outline: transparent;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.form-input:focus {
+    border-color: #2196F3;
+}
+
+
+textarea {
+    display: block;
+    width: 100%;
+    padding: 12px 16px;
+    height: 120px;
+    resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    margin-bottom: 20px;
+    outline: transparent;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+textarea:focus {
+    border-color: #2196F3;
+
+}
+
+
+textarea::placeholder {
+    
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16x;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+}
+
+
+.term {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+.term-var {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #2196F3;
+    text-decoration: underline;
+
+}
+
+.send {
+    text-align: center;
+    
+}
+.button-contract { 
+    width: 200px;
+    height: 50px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: #2196F3;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    
+    
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
 
     cursor: pointer;
+
+}
+
+.policy {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.mark {
+    width: 16px;
+    height: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 7px;
+
+    border-radius: 2px;
+    outline: 2px solid #212121;
+    outline-offset: -2px;  
+
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+}
+
+.checkbox:checked + .mark{
+    background-color: var(--accent-color);
+    outline: 2px solid var(--accent-color);
+    fill: #FFFFFF;
+    
+}
+.deal-icons {
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox:checked + .mark .deal-icons {
+    opacity: 1;
+
 }
