--- a/css/styles.css
+++ b/css/styles.css
@@ -719,7 +719,8 @@ input {
     background: #2196F3;
     border-color: #2196F3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;   
+    border-radius: 4px;  
+    border: 0px; 
     
     
 }
