--- a/css/styles.css
+++ b/css/styles.css
@@ -722,7 +722,7 @@ input {
     border-radius: 4px;  
     border: 0px; 
     
-    
+    cursor: pointer;
 }
 
 .btn-telegram {
@@ -1156,6 +1156,8 @@ textarea::placeholder {
     outline-offset: -2px;  
 
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    cursor: pointer;
 
 
 }
